<resources>
    <string name="app_name">My Emergency Assistant</string>
    <string name="app_name_abbrev">M.E.A.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="title_developers">Developers</string>
    <string name="title_rate_us">Rate Us</string>

    <string name="welcome">WELCOME</string>
    <string name="sign_up">Sign up</string>

    <string name="user_details_page">Personal Info</string>
    <string name="user_name">Your Full Name *</string>
    <string name="email">Your Email *</string>

    <string name="emergency_contacts_page">Emergency contacts \n (At least 3)</string>
    <string name="em_name">Name *</string>
    <string name="em_number">Phone Number *</string>
    <string name="one">1. </string>
    <string name="two">2. </string>
    <string name="three">3. </string>

    <string name="medical_info_page"> Medical Info </string>
    <string name="blood_type">Blood Type *</string>

    <string-array name="blood_type_array">
        <item name="blood_type_not_sure">I\'m Not Sure</item>
        <item name="A_positive"> A + </item>
        <item name="A_negative"> A - </item>
        <item name="AB"> AB </item>
        <item name="O_positive"> O + </item>
        <item name="O_negative"> O - </item>
    </string-array>


    <string name="pre_existing_med_conditions">Pre-existing Medical Conditions \n(If any e.g. Diabetes)</string>
    <string name="allergies">Allergies /n (If any)</string>

    <string name="save_button">Complete SignUp</string>

    <string name="save_error">Error saving the details. \n Please try again</string>
    <string name="save_success">Account created successfully!</string>
    <string name="update_error">Update failed!</string>
    <string name="update_successful">Update Successful!</string>

    <string name="title_profile">Profile</string>
    <string name="title_contacts">Contacts</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">M . E . A </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_call_operator">CALL OPERATOR</string>
    <string name="title_send_sos">SEND SOS</string>

    <string name="content_description_profile_pic">Profile Picture</string>

    <string name="empty_contacts_view">Nothing Here ... \n Please add an emergency contact</string>

    <string name="call">Call</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>

    <string name="edit_contact">Edit Contact</string>
    <string name="add_contact">Add Contact</string>

    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing?</string>
    <string name="unsaved_changes_dialog_message">You have unsaved changes</string>

    <string name="save_contact_success">Contact saved!</string>


</resources>
