<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_info"
            android:title="@string/title_profile"/>
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_emergency_contact"
            android:title="@string/title_contacts"/>
    </group>

    <item android:title="@string/title_about">
        <menu>
            <item
                android:id="@+id/nav_about_developer"
                android:icon="@drawable/ic_developer"
                android:title="@string/title_developers"/>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_star"
                android:title="@string/title_rate_us"/>
        </menu>
    </item>

</menu>
