<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/welcome"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="60dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="serif-monospace"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name_abbrev"
            android:gravity="center"
            android:textSize="22sp"
            android:padding="16dp"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:id="@+id/ib_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
             android:src="@drawable/ic_arrow_right">

        </ImageButton>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_user_details"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_details_page"
            android:layout_marginBottom="40dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/user_name">

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="13"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="13"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_emergency_contacts"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_contacts_page"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="30dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_name">

                        <EditText
                            android:id="@+id/et_name_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:ems="13"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_number">

                        <EditText
                            android:id="@+id/et_phone_number_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="13"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_name">

                        <EditText
                            android:id="@+id/et_name_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:ems="13"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_number">

                        <EditText
                            android:id="@+id/et_phone_number_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="13"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_name">

                        <EditText
                            android:id="@+id/et_name_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:ems="13"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_number">

                        <EditText
                            android:id="@+id/et_phone_number_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="13"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/form_user_medical_info"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medical_info_page"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_type"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/blood_type_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pre_existing_med_conditions"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/et_medical_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/allergies"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/et_allergies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_complete_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>

    </LinearLayout>


</LinearLayout>